create streamresponse from swagger schema
