# src/backend/swagger.yaml
@@ -207,3 +207,8 @@ components:
                     type: string
                     description: The prompt that was used for generation
                     example: "Tell me a short joke"
+                prompt_id:
+                    type: string
+                    format: uuid
+                    description: The prompt that was used for generation
+
